2008-02-20  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-info.c (_unquote_string): new.
	(imsettings_info_notify_properties): unquote string for escaped characters.

2008-02-19  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_manager_fam_event_loop):
	Update the fam status if the result code is FAMEndExist anyway.
	(imsettings_info_manager_pending_init): new function to check
	if the initial FAM events are proceeded.
	(imsettings_info_manager_real_get_list): wait for the initialization
	finished.
	(imsettings_info_manager_real_get_current_user_im): likewise.
	(imsettings_info_manager_real_get_current_system_im): likewise.
	(imsettings_info_manager_real_get_info): likewise.

	* src/factory.c (imsettings_manager_real_start_im):
	Add appropriate error handling.

	* src/factory.c (reload_cb): Do nothing for reloading anymore.

	* src/factory_info.c: Add new class to deal with the event.
	(imsettings_info_manager_fam_event_loop): new to deal with FAM event.

	* imsettings/src/imsettings-manager.[ch]: Move into factory.c

	* imsettings/imsettings-request.c (imsettings_request_get_current_user_im):
	new
	(imsettings_request_get_current_system_im): new.

	* imsettings/imsettings-observer.c (imsettings_get_current_user_im):
	new.
	(imsettings_get_current_system_im): new.

	* imsettings/imsettings.xml: Move GetList method to
	com.redhat.imsettings.IMInfo interface.
	Add GetCurrentUserIM and GetCurrentSystemIM.

	* utils/imsettings-reload.c (main): ugly hack to make sure if a signal
	is delivered. this might not work on some machines.

	* utils/imsettings-list.c (main): change the output a bit friendly.

2008-02-08  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/imsettings-request.c: similar fixes.

	* imsettings/imsettings.xml: similar fixes.

	* imsettings/backends/gconf/introspection.xml: similar fixes.

	* imsettings/imsettings.h: get rid of "DBus" from all the services,
	paths and interfaces name.
